--- a/index.html
+++ b/index.html
@@ -34,25 +34,22 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-     <div class="intro-lead-in" style="text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
-             0px 8px 13px rgba(0,0,0,0.1),
-             0px 18px 23px rgba(0,0,0,0.1)";>Introducing the new way to <strong>go out with friends</strong></div>          
-       <div class="intro-heading" style="text-shadow: 6px 6px 0px rgba(0,0,0,0.2);">Pathtime</div>
-<img src="Images/logo.png"; width="150" ; height="150">
-          <div class="intro-lead-in" style="padding-top: 2em ; font-size: 28px; text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+     <div class="intro-lead-in" style="text-shadow: 2px 2px 2px black; margin-bottom: 4%; margin-top: 2%";>Introducing the new way to <strong>go out with friends</strong></div>          
+       <div class="intro-heading" style="text-shadow: 6px 6px 2px black");">Pathtime</div>
+<img src="Images/logonew.png"; width="180" ; height="220">
+          <div class="intro-lead-in" style="padding-top: 2em ; font-size: 28px; text-shadow: 2px 2px 1px black,
              0px 8px 13px rgba(0,0,0,0.1),
              0px 18px 23px rgba(0,0,0,0.1);">We are launching in 2018, sign up to join the community right now !</div>
 
-<form class="form-inline" style="align-items: center">
+
+<form class="form-inline" style="margin: 5%">
   <div class="form-group">
-    <label class="sr-only" for="exampleInputEmail3">ENTER YOUR FULL NAME</label>
-    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR FULL NAME" style="font-size: 18px; font-weight: 800 ; padding: 20px 40px; margin-top: 3%; margin-bottom: 2%; margin-left: 0px">
+    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR NAME" style="font-size: 18px; font-weight: 800 ; padding: 20px 40px; margin-top: 3%; margin-bottom: 2%; margin-left: 0px">
   </div>
     <div class="form-group">
-    <label class="sr-only" for="exampleInputEmail3">ENTER YOUR EMAIL</label>
     <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR EMAIL" style="font-size: 18px; font-weight: 800 ; padding: 20px 40px; margin:auto">
   </div>
-          <a class="btn btn-xl js-scroll-trigger" style="font-size: 18px; font-weight: 700 ; padding: 20px 40px; margin-top: 3%; margin-bottom: 2%; margin-left: 0px" href="#">JOIN US !</a>
+          <a class="btn btn-xl js-scroll-trigger" style="font-size: 18px; font-weight: 700 ; padding: 20px 40px; margin-bottom: 1%; margin-left: 0px" href="#">JOIN US !</a>
 </form>
 
 
@@ -61,7 +58,7 @@
     </header>
 
     <!-- pains -->
-    <section id="pains">
+    <section id="pains" style="background-color:#f8f9fa!important">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
@@ -69,7 +66,7 @@
             <img class="rounded-circle img-fluid" src="Images/fatigue.png" alt="">
             </span>
             <h4 class="service-heading" style="padding-top: 1em">Ever felt lost in information overload?</h4>
-            <p class="text-justify">We have access to so much information that we don’t know what recommendations or information are trust worthy or adapted for us and we just waste time sorting it out. </p>
+            <p class="text-justify" style="color:#868e96!important">We have access to so much information that we don’t know what recommendations or information are trust worthy or adapted for us and we just waste time sorting it out. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -89,9 +86,6 @@
         </div>
       </div>
     </section>
-
-    <div class="divider" style="width: 20%; height: 2px; background-color: #EE3046 ; margin: auto; margin-top: 3%"></div>
-
 
     <!-- About -->
     <section id="about">
@@ -124,7 +118,7 @@
               <!-- item 2-->
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="Images/Finding.png" alt="">
+                  <img class="rounded-circle img-fluid" src="Images/morepeople.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -137,7 +131,7 @@
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="Images/Finding.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -150,7 +144,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="Images/morepeople.png" alt="">
+                  <img class="rounded-circle img-fluid" src="Images/moremerrier.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -163,7 +157,7 @@
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="Images/keeptrack.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -197,10 +191,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-12 col-md-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="Images/tom.png" alt="">
-              <h4>Tom Halimi</h4>
+              <h4>Tom</h4>
               <p class="text-muted">Business Developer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
@@ -221,10 +215,10 @@
               </ul>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-12 col-md-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="Images/thisma.png" alt="">
-              <h4>Mathis Halimi</h4>
+              <h4>Mathis</h4>
               <p class="text-muted">Operation Manager</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
@@ -245,10 +239,10 @@
               </ul>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-12 col-md-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="Images/ruben.png" alt="">
-              <h4>Ruben Moutot</h4>
+              <h4>Ruben</h4>
               <p class="text-muted">Lead Developer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
@@ -279,7 +273,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Contact Us</h2>
+            <h2 class="section-heading" style="margin-bottom: 4%">Contact Us</h2>
           </div>
         </div>
         <div class="row">
@@ -290,7 +284,7 @@
                   <div class="form-group">
                     <input class="form-control" id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
                     <p class="help-block text-danger"></p>
-                  </div><
+                  </div>
                   <div class="form-group">
                     <input class="form-control" id="email" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
                     <p class="help-block text-danger"></p>
@@ -352,227 +346,6 @@
         </div>
       </div>
     </footer>
-
-    <!-- Portfolio Modals -->
-
-    <!-- Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Finish</li>
-                    <li>Category: Identity</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <h2>Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                  <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Window</li>
-                    <li>Category: Photography</li>
-                  </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
-                    <i class="fa fa-times"></i>
-                    Close Project</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/style.min.js"></script>
 
   </body>
 
