--- a/index.html
+++ b/index.html
@@ -32,56 +32,64 @@
 
     <!-- Header -->
     <header class="masthead">
-      <div class="container">
         <div class="intro-text">
-     <div class="intro-lead-in" style="text-shadow: 2px 2px 2px black; margin-bottom: 4%; margin-top: 2%";>Introducing the new way to <strong>go out with friends</strong></div>          
+     <div class="intro-lead-in" style="text-shadow: 2px 2px 2px black; margin-bottom: 3%; margin-top: 3%";>Introducing the new way to <strong>go out with friends</strong></div>          
        <div class="intro-heading" style="text-shadow: 6px 6px 2px black");">Pathtime</div>
 <img src="Images/logonew.png"; width="180" ; height="220">
-          <div class="intro-lead-in" style="padding-top: 2em ; font-size: 28px; text-shadow: 2px 2px 1px black,
+          <div class="intro-lead-in" style="padding-top: 1em ; font-size: 28px; text-shadow: 2px 2px 1px black,
              0px 8px 13px rgba(0,0,0,0.1),
              0px 18px 23px rgba(0,0,0,0.1);">We are launching in 2018, sign up to join the community right now !</div>
 
 
-<form class="form-inline" style="margin: 5%">
+<form class="form-inline" style="margin-top: 1%">
   <div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR NAME" style="font-size: 18px; font-weight: 800 ; padding: 20px 40px; margin-top: 3%; margin-bottom: 2%; margin-left: 0px">
+    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR NAME" style="font-size: 18px; font-weight: 800 ; padding: 20px 40px; margin-top: 1%; margin-bottom: 2%; margin-left: 0px">
   </div>
     <div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR EMAIL" style="font-size: 18px; font-weight: 800 ; padding: 20px 40px; margin:auto">
+    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR EMAIL" style="font-size: 18px; margin-bottom: 1%; font-weight: 800 ; padding: 20px 40px; margin:auto">
   </div>
-          <a class="btn btn-xl js-scroll-trigger" style="font-size: 18px; font-weight: 700 ; padding: 20px 40px; margin-bottom: 1%; margin-left: 0px" href="#">JOIN US !</a>
+          <a class="btn btn-xl js-scroll-trigger" style="font-size: 18px; font-weight: 700 ; padding: 20px 40px; margin-left: 0px" href="#">JOIN US !</a>
 </form>
 
 
-
-</div>
     </header>
 
     <!-- pains -->
     <section id="pains" style="background-color:#f8f9fa!important">
+<!-- début -->
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">FEATURES</h2>
+            <h3 class="section-subheading text-muted">We started the story, let's continue it together !</h3>
+          </div>
+        </div></div></section>
+
+    <!-- fin du test-->
       <div class="container">
         <div class="row text-center">
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
             <img class="rounded-circle img-fluid" src="Images/fatigue.png" alt="">
             </span>
-            <h4 class="service-heading" style="padding-top: 1em">Ever felt lost in information overload?</h4>
-            <p class="text-justify" style="color:#868e96!important">We have access to so much information that we don’t know what recommendations or information are trust worthy or adapted for us and we just waste time sorting it out. </p>
+            <h4 class="service-heading" style="padding-top: 1em">Isn't it boring to do the same things every time?</h4>
+            <p class="text-justify" style="color:#868e96!important">Perhaps it's time to try something new. But to do so should you rely on websites that orient everyone to the same places? A comment is only useful if the person providing it likes the same things you do. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
             <img class="rounded-circle img-fluid" src="Images/lonely.png" alt="">
             </span>
-            <h4 class="service-heading" style="padding-top: 1em">Want to meet new people when you go out, or before?</h4>
-            <p class="text-muted">So many times we ended up not going out because we did not know what to do or with whom</p>
+            <h4 class="service-heading" style="padding-top: 1em">It's great for you, but is it for your friends?</h4>
+           <p class="text-justify" style="color:#868e96!important">Have you ever spent hours looking for the perfect activity but turned out none of your friends were down for it? That time is only well spent if that research also take what they like into account.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading" style="padding-top: 1em">Keep forgeting the spots you found out?</h4>
-            <p class="text-muted">Every day we inevitably forget the new spots, activities and people we discover</p>
+            <h4 class="service-heading" style="padding-top: 1em">And if they still don't want to go?</h4>
+           <p class="text-justify" style="color:#868e96!important">Do you give up? Or do you look for others that would love to go? You may not know them. You may have very few things in common. But you can share the same passion, the same desire, and that is more precious than anything.</p>
           </div>
         </div>
       </div>
@@ -195,7 +203,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="Images/tom.png" alt="">
               <h4>Tom</h4>
-              <p class="text-muted">Business Developer</p>
+              <p class="text-muted"><em>CEO</em> <br>Business Developer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -219,7 +227,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="Images/thisma.png" alt="">
               <h4>Mathis</h4>
-              <p class="text-muted">Operation Manager</p>
+              <p class="text-muted"><em>COO</em> <br>Operation Manager</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#" >
@@ -243,7 +251,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="Images/ruben.png" alt="">
               <h4>Ruben</h4>
-              <p class="text-muted">Lead Developer</p>
+              <p class="text-muted"><em>CTO</em><br>Lead Developer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
