--- a/index.html
+++ b/index.html
@@ -33,24 +33,56 @@
     <!-- Header -->
     <header class="masthead">
         <div class="intro-text">
-     <div class="intro-lead-in" style="text-shadow: 2px 2px 2px black; margin-bottom: 3%; margin-top: 3%";>Introducing the new way to <strong>go out with friends</strong></div>          
+     <div class="intro-lead-in" style="text-shadow: 2px 2px 2px black; margin-bottom: 3%; padding-top: 3%";>Introducing the new way to <strong>go out with friends</strong></div>          
        <div class="intro-heading" style="text-shadow: 6px 6px 2px black");">Pathtime</div>
 <img src="Images/logonew.png"; width="180" ; height="220">
           <div class="intro-lead-in" style="padding-top: 1em ; font-size: 28px; text-shadow: 2px 2px 1px black,
              0px 8px 13px rgba(0,0,0,0.1),
              0px 18px 23px rgba(0,0,0,0.1);">We are launching in 2018, sign up to join the community right now !</div>
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="margin: 2.8%; font-size: 32px">
+  Join Us !
+</button>
 
-<form class="form-inline" style="margin-top: 1%">
-  <div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR NAME" style="font-size: 18px; font-weight: 800 ; padding: 20px 40px; margin-top: 1%; margin-bottom: 2%; margin-left: 0px">
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+  <!-- questionnaire WUFOO dans la modal-->
+          <div id="wufoo-z1vba4801lzjnrb">
+Fill out my <a href="https://pathtime.wufoo.com/forms/z1vba4801lzjnrb">online form</a>.
+</div>
+<script type="text/javascript">var z1vba4801lzjnrb;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'pathtime',
+'formHash':'z1vba4801lzjnrb',
+'autoResize':true,
+'height':'340',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { z1vba4801lzjnrb = new WufooForm();z1vba4801lzjnrb.initialize(options);z1vba4801lzjnrb.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
+<!-- fin questionnaire -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
   </div>
-    <div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="ENTER YOUR EMAIL" style="font-size: 18px; margin-bottom: 1%; font-weight: 800 ; padding: 20px 40px; margin:auto">
-  </div>
-          <a class="btn btn-xl js-scroll-trigger" style="font-size: 18px; font-weight: 700 ; padding: 20px 40px; margin-left: 0px" href="#">JOIN US !</a>
-</form>
-
+</div>
 
     </header>
 
