same but responsive

--- a/index.html
+++ b/index.html
@@ -33,25 +33,21 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- fin modal test 2 header -->
 
+
   </head>
 
   <body id="page-top">
 
+ 
+  <header class="masthead">
 
-    <!-- Header -->
-    <header class="masthead">
 
-    <!-- début du nouveau test --> 
-
-    <!-- normal -->
   <div class="intro-text" style="min-height: 400px; min-width: 320px">
-
-            <div class="intro-lead-in" style="text-shadow: 2px 2px 2px black; padding-top: 2%; padding-bottom: 1%">Introducing the new way to <strong>go out with friends</strong></div>          
-            <div class="intro-heading" style="text-shadow: 6px 6px 2px black; font-size: 600%;");">Pathtime</div>
-            <img src="Images/logonew.png"; width="15%" ; height="15%">
-            <div class="intro-lead-in" style="padding-top: 1em ; text-shadow: 2px 2px 1px black,
+    
+            <div class="spacer" style="min-height: 430px"></div>
+            <div class="intro-lead-in" style="padding-top: 1.5em ;padding-top: 1em; text-shadow: 2px 2px 1px black,
              0px 8px 13px rgba(0,0,0,0.1),
-             0px 18px 23px rgba(0,0,0,0.1);">We are launching in 2018, sign up to join the community right now !</div>
+             0px 18px 23px rgba(0,0,0,0.1);"><strong>We are launching in 2018, sign up to join the community right now !</strong></div>
 
               <!-- Button trigger modal -->
               <button type="button" class="btn btn-xl btn-lg" id="sendMessageButton" data-toggle="modal" data-target="#myModal" style="margin: 2.5%; font-size: 32px"><strong>
@@ -93,10 +89,6 @@
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary">Save changes</button>
                       </div>
-
-                
-    <!-- fin normal -->
-
 
   </div>
 </div>
@@ -144,13 +136,14 @@
       </div>
     </section>
 
+
     <!-- About -->
     <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center" style="padding-left:5%; padding-right: 5%">
             <h2 class="section-heading"><strong>FEATURES</strong></h2>
-            <h3 class="section-subheading text-muted">We started the story, let's continue it together !</h3>
+            <h3 class="section-subheading text-muted" style="padding: 1em">Based on your mood, Follow the right path, Of trust worthy Pathers. Share your uniqueness, and ou'll remember it forever.</h3>
           </div>
         </div>
 
@@ -164,10 +157,10 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Stay in tune with your newsfeed</h4>
+                    <h4>Based on your mood...</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Access to all your relations' findings and information on temporary events or new places around you</p>
+                    <p class="text-muted">We take your mood into consideration and only suggest the activities that you might like at the moment.</p>
                   </div>
                 </div>
               </li>
@@ -179,10 +172,10 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Finding something to do has never been so easy</h4>
+                    <h4>Follow the right path...</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Fill out all activities, mood, people with you and other details you need for going out</p>
+                    <p class="text-muted">Your Path is made of the activities you plan to do. Create it from scratch or draw inspiration from existing ones. </p>
                   </div>
                 </div>
               </li>
@@ -192,10 +185,10 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Access to custom-made recommendations</h4>
+                    <h4>Of pathers trust worthy...</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Stop trusting strangers on internet, focus on recommendation of people like you and discover tailor-made activities</p>
+                    <p class="text-muted">We only show you the paths that were created or tested by users that look like you and your friends.</p>
                   </div>
                 </div>
               </li>
@@ -205,10 +198,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>The more the merrier</h4>
+                    <h4>Share your uniqueness...</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Find other people like you to join and enjoy a unique experience !</p>
+                    <p class="text-muted">Your path is unique. Share it with your Friends and other pathers with similar desires.
+                    </p>
                   </div>
                 </div>
               </li>
@@ -218,10 +212,10 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Keep track of all your activities on your <em>PathPort</em></h4>
+                    <h4>You'll remember it forever.</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Search for all your creation, findings, relations and even more on a dedicated digital passport</p>
+                    <p class="text-muted">The little shops, the little bars and clubs where you had a great time will now always stay within your reach.</p>
                   </div>
                 </div>
               </li>
@@ -244,7 +238,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading"><strong>Our Amazing Team</strong></h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">We started the story, let's write the next chapters together.</h3>
           </div>
         </div>
         <div class="row">
